--- a/fontend/package.json
+++ b/fontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.9",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -12,6 +13,7 @@
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
