--- a/fontend/package.json
+++ b/fontend/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.5.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.9",
@@ -12,6 +15,7 @@
     "customize-cra": "^1.0.0",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
